🐛  (menu)-fix menu overlap issue
 #177

--- a/src/menu/theme.scss
+++ b/src/menu/theme.scss
@@ -13,6 +13,10 @@
     font-size: 0.9rem !important;
 }
 
+:local(.mainWrapper) {
+    position: relative;
+}
+
 :local(.wrapper) {
     font-family: sans-serif;
     display: flex;
